--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="headerContainer">
             <div class="headerImg">
                 <img class="Picture"
-                    src="james60_a_malay_professional_women_model_wear_hijab_for_a_passp_372dd577-fa1f-452b-adbd-1b2ad7cef82e.png">
+                    src="./img/james60_a_malay_professional_women_model_wear_hijab_for_a_passp_372dd577-fa1f-452b-adbd-1b2ad7cef82e.png">
             </div>
             <div class="HeaderdetailProfile">
                 <div class="nameProfile">Carlos Sany</div>
